move tags to roles

--- a/focal.yml
+++ b/focal.yml
@@ -4,6 +4,10 @@
   connection: local
   roles:
     - role: common
+      tags: common
     - role: bash
+      tags: bash
     - role: desktop
+      tags: desktop
     - role: linuxbrew
+      tags: linuxbrew
