--- a/roles/linuxbrew/tasks/main.yml
+++ b/roles/linuxbrew/tasks/main.yml
@@ -4,21 +4,18 @@
     repo: https://github.com/Homebrew/brew
     dest: "{{ ansible_env['HOME'] }}/.linuxbrew/Homebrew"
     version: master
-  tags: ["linuxbrew"]
 
 - name: Create .linuxbrew/bin
   ansible.builtin.file:
     dest: "{{ ansible_env['HOME'] }}/.linuxbrew/bin"
     state: directory
     mode: '0770'
-  tags: ["linuxbrew"]
 
 - name: Create symlink
   ansible.builtin.file:
     src: "{{ ansible_env['HOME'] }}/.linuxbrew/Homebrew/bin/brew"
     dest: "{{ ansible_env['HOME'] }}/.linuxbrew/bin/brew"
     state: link
-  tags: ["linuxbrew"]
 
 - name: Configure .bashrc
   ansible.builtin.blockinfile:
@@ -30,9 +27,8 @@
     block: |
       eval $(~/.linuxbrew/bin/brew shellenv)
       source ~/.linuxbrew/Homebrew/completions/bash/brew
-  tags: ["linuxbrew"]
 
 - name: Install brew packages
   community.general.homebrew:
     name: "{{ linuxbrew_packages }}"
-  tags: ["linuxbrew", "brew_package"]
+  tags: ["brew_package"]
