--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -15,7 +15,7 @@
       dst: pt_pkg.so
     - src: aptsources
       dst: aptsources
-  tags: ["common", "python"]
+  tags: ["python"]
 
 - name: Update system
   ansible.builtin.apt:
@@ -24,48 +24,41 @@
     cache_valid_time: 600
     upgrade: dist
   become: true
-  tags: ["common"]
 
 - name: Install common packages
   ansible.builtin.apt:
     name: "{{ common_packages }}"
   become: true
-  tags: ["common"]
 
 - name: Copy .gitconfig
   ansible.builtin.copy:
     src: gitconfig
     dest: "{{ ansible_env['HOME'] }}/.gitconfig"
     mode: "0660"
-  tags: ["common"]
 
 - name: Copy .vimrc
   ansible.builtin.copy:
     src: vimrc
     dest: "{{ ansible_env['HOME'] }}/.vimrc"
     mode: "0660"
-  tags: ["common"]
 
 - name: Install Oh My Tmux
   ansible.builtin.git:
     repo: https://github.com/gpakosz/.tmux.git
     dest: "{{ ansible_env['HOME'] }}/.tmux"
     version: master
-  tags: ["common"]
 
 - name: Create .tmux link
   ansible.builtin.file:
     src: "{{ ansible_env['HOME'] }}/.tmux/.tmux.conf"
     dest: "{{ ansible_env['HOME'] }}/.tmux.conf"
     state: link
-  tags: ["common"]
 
 - name: Copy .tmux.conf.local
   ansible.builtin.copy:
     src: tmux.conf.local
     dest: "{{ ansible_env['HOME'] }}/.tmux.conf.local"
     mode: "0660"
-  tags: ["common"]
 
 - name: Configure sudo
   ansible.builtin.blockinfile:
@@ -75,17 +68,16 @@
       NOPASSWD: /usr/bin/apt,/sbin/reboot,/sbin/shutdown
     validate: /usr/sbin/visudo -cf %s
   become: "yes"
-  tags: ["common"]
 
 - name: Install Docker
   ansible.builtin.import_tasks: docker.yml
   become: "yes"
-  tags: ["common", "docker"]
+  tags: ["docker"]
 
 - name: Install VirtualBox
   ansible.builtin.import_tasks: virtualbox.yml
   become: "yes"
-  tags: ["common", "virtualbox"]
+  tags: ["virtualbox"]
 
 - name: Commit new
   ansible.builtin.cron:
@@ -93,20 +85,20 @@
     minute: "*/15"
     job: "cd /home/{{ ansible_env['USER'] }}/docs && \
       git add . && git commit -m 'cron commit'"
-  tags: ["common", "cron"]
+  tags: ["cron"]
 
 - name: Install Hashicorp key
   ansible.builtin.apt_key:
     url: https://apt.releases.hashicorp.com/gpg
   become: true
-  tags: ["common", "hashicorp"]
+  tags: ["hashicorp"]
 
 - name: Add Hashicorp repository
   ansible.builtin.apt_repository:
     repo: "deb [arch=amd64] https://apt.releases.hashicorp.com \
       {{ ansible_distribution_release }} main"
   become: true
-  tags: ["common", "hashicorp"]
+  tags: ["hashicorp"]
 
 - name: Install Hashicorp tools
   ansible.builtin.apt:
@@ -114,4 +106,4 @@
       - vagrant
     update_cache: "yes"
   become: true
-  tags: ["common", "hashicorp"]
+  tags: ["hashicorp"]
