--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -17,3 +17,11 @@ vscode_plugings:
     name: ms-kubernetes-tools.vscode-kubernetes-tools,
     path: ms-kubernetes-tools.vscode-kubernetes-tools-1.3.7
   }
+  - {
+    name: ms-azuretools.vscode-docker,
+    path: ms-azuretools.vscode-docker-1.21.0
+  }
+  - {
+    name: redhat.ansible,
+    path: redhat.ansible-0.8.1
+  }
