--- a/roles/bash/tasks/main.yml
+++ b/roles/bash/tasks/main.yml
@@ -51,6 +51,21 @@
       export GOPATH={{ ansible_env['HOME'] }}/go
       export GOROOT="$(brew --prefix golang)/libexec"
 
+- name: Configure k8s
+  ansible.builtin.blockinfile:
+    path: "{{ ansible_env['HOME'] }}/.bashrc_{{ ansible_env['USER'] }}"
+    insertbefore: "^# bashrc_begin"
+    marker_begin: k8s_begin
+    marker_end: k8_end
+    marker: "# {mark}"
+    block: |
+      if [[ -x /home/irqoff/.linuxbrew/bin/kubectl ]]; then
+        source <(/home/irqoff/.linuxbrew/bin/kubectl completion bash)
+      fi
+      if [[ -x /home/irqoff/.linuxbrew/bin/minikube ]]; then
+        source <(/home/irqoff/.linuxbrew/bin/minikube completion bash)
+      fi
+
 - name: Copy .bashrc_functions
   ansible.builtin.copy:
     src: bashrc_functions
